Implementando lógica para salvar e consultar estudantes

--- a/webflux/src/main/resources/application.properties
+++ b/webflux/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri=mongodb+srv://gabriel:admin@apirestdatabase.4lbztmv.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=webflux_api
+spring.webflux.base-path=/school
